// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHProgressDonut.vue renders default VHProgressDonut 1`] = `
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170" class="Progress Progress--medium">
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" fill="none" cx="85" cy="85" r="70" class="Progress-track"></circle>
  </g>
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" stroke-dasharray="0, 439.82259999999997" stroke-linecap="butt" fill="none" cx="85" cy="85" r="70" class="Progress-bar Progress-bar--green"></circle>
  </g> <text x="86" y="106" text-anchor="middle" class="Progress-label">

  </text>
</svg>
`;

exports[`VHProgressDonut.vue renders modified VHProgressDonut blue large 1`] = `
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170" class="Progress Progress--large">
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" fill="none" cx="85" cy="85" r="70" class="Progress-track"></circle>
  </g>
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" stroke-dasharray="0, 439.82259999999997" stroke-linecap="butt" fill="none" cx="85" cy="85" r="70" class="Progress-bar Progress-bar--blue"></circle>
  </g> <text x="86" y="106" text-anchor="middle" class="Progress-label">

  </text>
</svg>
`;

exports[`VHProgressDonut.vue renders modified VHProgressDonut blue small 1`] = `
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170" class="Progress Progress--medium">
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" fill="none" cx="85" cy="85" r="70" class="Progress-track"></circle>
  </g>
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" stroke-dasharray="4.398225999999999, 439.82259999999997" stroke-linecap="butt" fill="none" cx="85" cy="85" r="70" class="Progress-bar Progress-bar--blue"></circle>
  </g> <text x="86" y="106" text-anchor="middle" class="Progress-label">

  </text>
</svg>
`;

exports[`VHProgressDonut.vue renders modified VHProgressDonut green small 1`] = `
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 170" class="Progress Progress--small">
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" fill="none" cx="85" cy="85" r="70" class="Progress-track"></circle>
  </g>
  <g transform="rotate(90 85 85)">
    <circle stroke-width="22" stroke-dasharray="43.98226, 439.82259999999997" stroke-linecap="butt" fill="none" cx="85" cy="85" r="70" class="Progress-bar Progress-bar--green"></circle>
  </g> <text x="86" y="106" text-anchor="middle" class="Progress-label">

  </text>
</svg>
`;
